--- a/web/WEB-INF/CustPage/gallery.html
+++ b/web/WEB-INF/CustPage/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Fortune Estates a Mobile App Flat Bootstrap Responsive Website Template | Gallery :: 小贝壳网站模板</title> 
+<title>gallery</title> 
 <!-- For-Mobile-Apps-and-Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -27,12 +27,11 @@
 			<nav class="top-nav">
 				<ul class="icon-list">
 					<li class="menu-title">CarManage</li>
-					<li><a href="main.html"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
-					<li><a href="about.html"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
-					<li><a href="property.html"><i class="glyphicon glyphicon-briefcase"></i> 登记车辆 </a></li>
-					<li><a href="agents.html"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
-					<li><a class="active" href="gallery.html"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>																					
-					<li><a href="contact.html"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
+					<li><a class="active" href="/jump?action=主页"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
+					<li><a href="/jump?action=个人信息"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
+					<li><a href="/jump?action=寻车试驾"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
+					<li><a class="active"  href="/jump?action=豪车鉴赏"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>
+					<li><a href="/jump?action=养修预约"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
 				</ul>
 			</nav>
 			<button class="close-button" id="close-button">C</button>
@@ -42,9 +41,7 @@
 				<div class="menu-icon">   
 					<button class="menu-button" id="open-button">O</button>
 				</div>
-				<div class="logo">
-					<h2><a href="main.html">CM</a></h2>
-				</div> 
+
 				<div class="clearfix"> </div>
 			</div>
 			<div class="content"> 
@@ -154,16 +151,7 @@
 				<!-- //brands -->
 				<!-- footer -->
 				<div class="w3agile footer"> 
-					<div class="footer-nav">
-						<ul>  
-							<li><a href="main.html"> Home </a></li>
-							<li><a href="about.html"> About </a> </li>
-							<li><a href="property.html"> Properties </a></li>
-							<li><a href="gallery.html"> Gallery</a></li>
-							<li><a href="contact.html"> Contact </a></li>
-						</ul> 
-						<div class="clearfix"> </div>
-					</div> 
+
 				</div> 
 			</div>
 		</div>
