--- a/web/WEB-INF/CustPage/imformation.html
+++ b/web/WEB-INF/CustPage/imformation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Fortune Estates a Mobile App Flat Bootstrap Responsive Website Template | Agents :: 小贝壳网站模板</title> 
+<title>imformation</title> 
 <!-- For-Mobile-Apps-and-Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -41,16 +41,15 @@
 </head>
 <body class="bg">
 	<div class="agile-main"> 
-		<div class="menu-wrap" id="style-1">  
+		<div class="menu-wrap" id="style-1"> 
 			<nav class="top-nav">
 				<ul class="icon-list">
 					<li class="menu-title">CarManage</li>
-					<li><a class="active" href="main.html"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
-					<li><a href="about.html"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
-					<li><a href="property.html"><i class="glyphicon glyphicon-briefcase"></i> 登记车辆 </a></li>
-					<li><a href="agents.html"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
-					<li><a href="gallery.html"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>																					
-					<li><a href="contact.html"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
+					<li><a href="/jump?action=主页"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
+					<li><a class="active" href="/jump?action=个人信息"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
+					<li><a href="/jump?action=寻车试驾"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
+					<li><a class="active"  href="/jump?action=豪车鉴赏"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>
+					<li><a href="/jump?action=养修预约"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
 				</ul>
 			</nav>
 			<button class="close-button" id="close-button">C</button>
@@ -60,9 +59,7 @@
 				<div class="menu-icon">   
 					<button class="menu-button" id="open-button">O</button>
 				</div>
-				<div class="logo">
-					<h2><a href="main.html">FE</a></h2>
-				</div>
+
 				<div class="clearfix"> </div>
 			</div>
 			<div class="content">
@@ -139,32 +136,32 @@
 					</div>
 
 					<!--  light box js -->
-					<script src="js/lightbox-plus-jquery.min.js"> </script> 
+					<script src="../../style/js/lightbox-plus-jquery.min.js"> </script>
 					<!-- //light box js--> 					 
 				</div>
 				<!-- //gallery --> 
 				
 				<!-- brands -->
 				<div class="w3agile brands"> 
-					<h3 class="w3ls-title">合作品牌</h3> 
+					<h3 class="w3ls-title">合作合作品牌</h3> 
 					<div class="brands-info">
 						<div class="brand-grids">
-							<a href="#"><img src="images/audi.jpg" alt=""/></a>
+							<a href="#"><img src="../../style/images/b1.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<a href="#"><img src="images/benz.jpg" alt=""/></a>
+							<a href="#"><img src="../../style/images/b2.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<a href="#"><img src="images/landrover.jpg" alt=""/></a>
+							<a href="#"><img src="../../style/images/b3.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<a href="#"><img src="images/brand-bmw.jpg" alt=""/></a>
+							<a href="#"><img src="../../style/images/b4.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<a href="#"><img src="images/chevrolet.jpg" alt=""/></a>
+							<a href="#"><img src="../../style/images/b5.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<a href="#"><img src="images/honda.jpg" alt=""/></a>
+							<a href="#"><img src="../../style/images/b6.jpg" alt=""/></a>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -185,8 +182,6 @@
 	<script src="../../style/js/classie.js"></script>
 	<script src="../../style/js/main.js"></script>
 	<!-- //menu-js -->
-	
-	<!-- pop-up-box -->
 	<script src="../../style/js/jquery.magnific-popup.js" type="text/javascript"></script>
 	<script>
 		$(document).ready(function() {
@@ -204,7 +199,6 @@
 		}); 
 	</script>
 	<!--//pop-up-box -->
-	
 	<!-- nicescroll-js -->
 	<script src="../../style/js/jquery.nicescroll.min.js"></script>
 	<script>
