--- a/web/WEB-INF/CustPage/main.html
+++ b/web/WEB-INF/CustPage/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Fortune Estates a Mobile App Flat Bootstrap Responsive Website Template | Main :: 小贝壳网站模板</title> 
+<title>main</title> 
 <!-- For-Mobile-Apps-and-Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -45,12 +45,17 @@
 			<nav class="top-nav">
 				<ul class="icon-list">
 					<li class="menu-title">CarManage</li>
-					<li><a class="active" href="main.html"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
-					<li><a href="about.html"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
-					<li><a href="property.html"><i class="glyphicon glyphicon-briefcase"></i> 登记车辆 </a></li>
-					<li><a href="agents.html"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
+					<!--<li><a class="active" href="main.html"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
+					<li><a href="imformation.html"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
+					 
+					<li><a href="testdrive.html"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
 					<li><a href="gallery.html"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>																					
-					<li><a href="contact.html"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
+					<li><a href="reserve.html"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>-->
+					<li><a class="active" href="/jump?action=主页"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
+					<li><a href="/jump?action=个人信息"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
+					<li><a href="/jump?action=寻车试驾"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
+					<li><a href="/jump?action=豪车鉴赏"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>
+					<li><a href="/jump?action=养修预约"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
 				</ul>
 			</nav>
 			<button class="close-button" id="close-button">C</button>
@@ -60,9 +65,7 @@
 				<div class="menu-icon">   
 					<button class="menu-button" id="open-button">O</button>
 				</div>
-				<div class="logo">
-					<h2><a href="main.html">CM</a></h2>
-				</div>
+
 				<div class="clearfix"> </div>
 			</div>
 			<div class="content">
@@ -87,12 +90,12 @@
 					</div> 
 					<div class="properties-bottom">
 						<div class="properties-img">
-							<img src="../../style/images/3.jpg" alt="">
+							<img src="../../style/images/2.jpg" alt="">
 							<div class="view-caption">
 								<h4><span class="glyphicon glyphicon-eye-open"></span></h4>  
 							</div>
 							<div class="w3ls-buy">
-								<a href="../../style/single.html">试驾</a>
+								<a href="testdrive.html">试驾</a> 
 							</div>
 						</div>
 						<div class="w3ls-text">
@@ -103,12 +106,12 @@
 					</div> 
 					<div class="properties-bottom">
 						<div class="properties-img">
-							<img src="../../style/images/2.jpg" alt="">
+							<img src="../../style/images/1.jpg" alt="">
 							<div class="view-caption rent-caption">
 								<h4><span class="glyphicon glyphicon-picture"></span></h4>  
 							</div>
 							<div class="w3ls-buy">
-								<a href="single.html" class="rent">鉴赏</a> 
+								<a href="gallery.html" class="rent">鉴赏</a> 
 							</div>
 						</div>
 						<div class="w3ls-text">
@@ -119,12 +122,12 @@
 					</div>
 					<div class="properties-bottom">
 						<div class="properties-img">
-							<img src="../../style/images/1.jpg" alt="">
+							<img src="../../style/images/3.jpg" alt="">
 							<div class="view-caption">
 								<h4><span class="glyphicon glyphicon-envelope"></span></h4>  
 							</div>
 							<div class="w3ls-buy">
-								<a href="single.html">养修</a> 
+								<a href="reserve.html">养修</a> 
 							</div>
 						</div>
 						<div class="w3ls-text">
@@ -139,7 +142,7 @@
 				<!-- //properties -->
 				<!-- brands -->
 				<div class="w3agile brands"> 
-					<h3 class="w3ls-title">品牌</h3> 
+					<h3 class="w3ls-title">合作品牌</h3> 
 					<div class="brands-info">
 						<div class="brand-grids">
 							<img src="../../style/images/b1.jpg" alt=""/>
@@ -165,16 +168,7 @@
 				<!-- //brands -->
 				<!-- footer -->
 				<div class="w3agile footer"> 
-					<div class="footer-nav">
-						<ul>  
-							<li><a href="main.html"> Home </a></li>
-							<li><a href="about.html"> About </a> </li>
-							<li><a href="property.html"> Properties </a></li>
-							<li><a href="gallery.html"> Gallery</a></li>
-							<li><a href="contact.html"> Contact </a></li>
-						</ul> 
-						<div class="clearfix"> </div>
-					</div> 
+
 				</div> 
 			</div>
 		</div>
