--- a/web/WEB-INF/CustPage/reserve.html
+++ b/web/WEB-INF/CustPage/reserve.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Fortune Estates a Mobile App Flat Bootstrap Responsive Website Template | Agents :: 小贝壳网站模板</title> 
+<title>reserve</title> 
 <!-- For-Mobile-Apps-and-Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -44,12 +44,11 @@
 			<nav class="top-nav">
 				<ul class="icon-list">
 					<li class="menu-title">CarManage</li>
-					<li><a href="main.html"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
-					<li><a href="about.html"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
-					<li><a href="property.html"><i class="glyphicon glyphicon-briefcase"></i> 登记车辆 </a></li>
-					<li><a class="active" href="agents.html"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
-					<li><a href="gallery.html"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>																					
-					<li><a href="contact.html"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
+					<li><a href="/jump?action=主页"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
+					<li><a href="/jump?action=个人信息"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
+					<li><a href="/jump?action=寻车试驾"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
+					<li><a href="/jump?action=豪车鉴赏"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>
+					<li><a class="active" href="/jump?action=养修预约"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
 				</ul>
 			</nav>
 			<button class="close-button" id="close-button">C</button>
@@ -59,23 +58,41 @@
 				<div class="menu-icon">   
 					<button class="menu-button" id="open-button">O</button>
 				</div>
-				<div class="logo">
-					<h2><a href="main.html">CM</a></h2>
-				</div>
+
 				<div class="clearfix"> </div>
 			</div>
 			<div class="content">
 				<!-- banner -->
 				<div class="banner about-banner"> 
 					<div class="banner-img">  
-						<h3>寻车试驾</h3>   
+						<h3>养修预约</h3>   
 					</div> 
 				</div>
 				<!-- //banner -->
-				
+				<!-- contact -->
+				<div class="w3agile contact"> 
+					<h3 class="w3ls-title">未完成</h3>
+					<div class="contact-form"> 
+						<form action="#" method="post">
+							<input type="text" name="Name" placeholder="Name" required="">
+							<input type="text" name="Email" placeholder="Email" required="">
+							<input type="text" name="Subject" placeholder="Subject" required="">
+							<textarea name="Message" placeholder="Message" required=""></textarea>
+							<input type="submit" value="SEND">
+						</form> 
+					</div>
+					<div class="contact-form"> 
+						<h3 class="w3ls-title">Contact Info</h3>
+						<p><b>Address :</b> Lorem St, NY 10002, Canada. </p>
+						<p><b>Telephone :</b> (2345) 111 222 3333</p>
+						<p><b>Fax :</b> (1234) 888 8884</p>
+						<p><b>Email :</b> <a href="mailto:example@mail.com">mail@example.com</a></p>
+					</div>
+				</div>
+				<!-- //contact --> 
 				<!-- brands -->
 				<div class="w3agile brands"> 
-					<h3 class="w3ls-title">品牌</h3> 
+					<h3 class="w3ls-title">Our Clients</h3> 
 					<div class="brands-info">
 						<div class="brand-grids">
 							<a href="#"><img src="../../style/images/b1.jpg" alt=""/></a>
@@ -101,16 +118,8 @@
 				<!-- //brands -->
 				<!-- footer -->
 				<div class="w3agile footer"> 
-					<div class="footer-nav">
-						<ul>  
-							<li><a href="main.html"> Home </a></li>
-							<li><a href="about.html"> About </a> </li>
-							<li><a href="property.html"> Properties </a></li>
-							<li><a href="gallery.html"> Gallery</a></li>
-							<li><a href="contact.html"> Contact </a></li>
-						</ul> 
-						<div class="clearfix"> </div>
-					</div> 
+
+
 				</div> 
 			</div>
 		</div>
