--- a/web/WEB-INF/CustPage/testdrive.html
+++ b/web/WEB-INF/CustPage/testdrive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>main</title> 
+<title>testdrive</title> 
 <!-- For-Mobile-Apps-and-Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,27 +11,26 @@
 <!-- Custom Theme files -->
 <link href="../../style/css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
 <link href="../../style/css/style.css" type="text/css" rel="stylesheet" media="all">
-<link rel="stylesheet" href="../../style/css/ken-burns.css" type="text/css" media="all" />
 <!-- //Custom Theme files -->
 <!-- js -->
 <script src="../../style/js/jquery-2.2.3.min.js"></script>
 <!-- //js -->
 <!-- pop-up-box -->
 <script src="../../style/js/jquery.magnific-popup.js" type="text/javascript"></script>
-	    <script>
-			$(document).ready(function() {
-				$('.popup-top-anim').magnificPopup({
-					type: 'inline',
-					fixedContentPos: false,
-					fixedBgPos: true,
-					overflowY: 'auto',
-					closeBtnInside: true,
-					preloader: false,
-					midClick: true,
-					removalDelay: 300,
-					mainClass: 'my-mfp-zoom-in'
-				});																							
-			}); 
+<script>
+	$(document).ready(function() {
+		$('.popup-top-anim').magnificPopup({
+			type: 'inline',
+			fixedContentPos: false,
+			fixedBgPos: true,
+			overflowY: 'auto',
+			closeBtnInside: true,
+			preloader: false,
+			midClick: true,
+			removalDelay: 300,
+			mainClass: 'my-mfp-zoom-in'
+		});																							
+	}); 
 </script>
 <!--//pop-up-box -->
 <!-- web-fonts -->  
@@ -41,19 +40,13 @@
 </head>
 <body class="bg">
 	<div class="agile-main"> 
-		<div class="menu-wrap" id="style-1"> 
+		<div class="menu-wrap" id="style-1">  
 			<nav class="top-nav">
 				<ul class="icon-list">
 					<li class="menu-title">CarManage</li>
-					<!--<li><a class="active" href="main.html"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
-					<li><a href="imformation.html"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
-					 
-					<li><a href="testdrive.html"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
-					<li><a href="gallery.html"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>																					
-					<li><a href="reserve.html"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>-->
-					<li><a class="active" href="/jump?action=homepage"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
+					<li><a href="/jump?action=homepage"><i class="glyphicon glyphicon-home"></i> 主页 </a></li>
 					<li><a href="/jump?action=personal_info"><i class="glyphicon glyphicon-info-sign"></i> 个人信息 </a></li>
-					<li><a href="/jump?action=testdrive"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
+					<li><a class="active" href="/jump?action=testdrive"><i class="glyphicon glyphicon-eye-open"></i> 寻车试驾 </a></li>
 					<li><a href="/jump?action=viewcar"><i class="glyphicon glyphicon-picture"></i> 豪车鉴赏</a></li>
 					<li><a href="/jump?action=reserve"><i class="glyphicon glyphicon-envelope"></i> 养修预约 </a></li>
 					<li><a href="/jump?action=apt_record"><i class="glyphicon glyphicon-briefcase"></i> 预约历史 </a> </li>
@@ -73,95 +66,82 @@
 				<!-- banner -->
 				<div class="banner about-banner"> 
 					<div class="banner-img">  
-						<h3>主页</h3>   
+						<h3>寻车试驾</h3>   
 					</div> 
 				</div>
 				<!-- //banner -->
-				<!-- welcome -->
-				<div class="welcome"> 
-					<h3 class="w3ls-title">欢迎！</h3> 
-					<p class="w3title-text">使用功能请点击左上角 </p>
-				</div>
-				<!-- //welcome -->
-				<!-- properties -->
-				<div class="w3agile properties">
-					<div class="properties-top">
-						<h3 class="w3ls-title">功能简介</h3>
-						<p class="w3title-text">这里您可以看到可以使用的主要功能 </p>
-					</div> 
+
+				<div class="w3agile agents">
+					<h3 class="w3ls-title">寻找爱车</h3>
+					<form action="/searchcar">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="查找..." >
+						<span class="input-group-btn">
+							<button class="btn btn-default" type="submit">Go!</button>
+						</span>
+					</div><!-- /input-group -->
+					</form>
 					<div class="properties-bottom">
 						<div class="properties-img">
-							<img src="../../style/images/2.jpg" alt="">
-							<div class="view-caption">
-								<h4><span class="glyphicon glyphicon-eye-open"></span></h4>  
+							<img src="../../style/images/1.jpg" alt="">
+							<div class="view-caption"><!--加rent-caption为蓝色-->
+								<h4><span class="glyphicon glyphicon-eye-open"></span> 123 </h4> <!--车辆简介-->
 							</div>
 							<div class="w3ls-buy">
-								<a href="/jump?action=testdrive">试驾</a>
+								<a href="/jump?action=车辆信息">详细</a> <!--加class="rent"为蓝色-->
 							</div>
 						</div>
 						<div class="w3ls-text">
-							<h6></h6>
-							<p><b></b></p>
-							<p><b></b></p>
+							<h5>Car1</h5><!--车名-->
+							<h6>¥500k</h6><!--价格-->
 						</div>
-					</div> 
+					</div>
 					<div class="properties-bottom">
 						<div class="properties-img">
 							<img src="../../style/images/1.jpg" alt="">
 							<div class="view-caption rent-caption">
-								<h4><span class="glyphicon glyphicon-picture"></span></h4>  
+								<h4><span class="glyphicon glyphicon-eye-open"></span> 123 </h4>
 							</div>
-							<div class="w3ls-buy">
-								<a href="/jump?action=viewcar" class="rent">鉴赏</a>
-							</div>
-						</div>
-						<div class="w3ls-text">
-							<h6></h6>
-							<p><b></b></p>
-							<p><b></b></p>
-						</div>
-					</div>
-					<div class="properties-bottom">
-						<div class="properties-img">
-							<img src="../../style/images/3.jpg" alt="">
-							<div class="view-caption">
-								<h4><span class="glyphicon glyphicon-envelope"></span></h4>  
-							</div>
-							<div class="w3ls-buy">
-								<a href="/jump?action=reserve">养修</a>
+							<div class="w3ls-buy" >
+								<a href="/jump?action=车辆信息" class="rent">详细</a>
 							</div>
 						</div>
 						<div class="w3ls-text">
-							<h5><a href="single.html"></a></h5>
-							<h6></h6>
-							<p><b></b></p>
-							<p><b></b></p>
+							<h5>Car2</h5>
+							<h6>¥500k</h6>
 						</div>
 					</div>
 					<div class="clearfix"> </div>
-				</div> 
-				<!-- //properties -->
+				</div>
+				<form action="/testdrive_book">
+				<div class="w3agile agents">
+					<h3 class="w3ls-title">试驾预约</h3>
+						<div align="center">
+						<button class="btn btn-default" type="submit" onclick="window.location.href='testdrive2.html'">进行预约</button>
+						</div>
+				</div>
+				</form>
 				<!-- brands -->
 				<div class="w3agile brands"> 
 					<h3 class="w3ls-title">合作品牌</h3> 
 					<div class="brands-info">
 						<div class="brand-grids">
-							<img src="../../style/images/b1.jpg" alt=""/>
+							<a href="#"><img src="../../style/images/b1.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<img src="../../style/images/b2.jpg" alt=""/>
+							<a href="#"><img src="../../style/images/b2.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<img src="../../style/images/b3.jpg" alt=""/>
+							<a href="#"><img src="../../style/images/b3.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<img src="../../style/images/b4.jpg" alt=""/>
+							<a href="#"><img src="../../style/images/b4.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<img src="../../style/images/b5.jpg" alt=""/>
+							<a href="#"><img src="../../style/images/b5.jpg" alt=""/></a>
 						</div>
 						<div class="brand-grids">
-							<img src="../../style/images/b6.jpg" alt=""/>
+							<a href="#"><img src="../../style/images/b6.jpg" alt=""/></a>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -178,7 +158,7 @@
 	<script src="../../style/js/classie.js"></script>
 	<script src="../../style/js/main.js"></script>
 	<!-- //menu-js -->
-	<!-- nice scroll-js -->
+	<!-- nicescroll-js -->
 	<script src="../../style/js/jquery.nicescroll.min.js"></script>
 	<script>
 		$(document).ready(function() {
@@ -190,7 +170,7 @@
 			$("#boxscroll").niceScroll({cursorborder:"",cursorcolor:"#00F",boxzoom:true}); // First scrollable DIV
 		});
 	</script>
-	<!-- //nice scroll-js -->
+	<!-- //nicescroll-js -->
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
