第二版本待修改

--- a/web/ShopPage/funcOverview.html
+++ b/web/ShopPage/funcOverview.html
@@ -54,7 +54,7 @@
 		  		    <p class="navbar-brand" ><font size="5">汽车销售管理系统</font></p>
 			    </div>
 			    <div>
-				    <p id= "huanying" class="navbar-brand" align="right"><font size="4">欢迎您！<a href="/SearchUserServlet" name="userid">${userid}</a> </font></p>
+				    <p id= "huanying" class="navbar-brand" align="right"><font size="4">用户：<a href="/SearchUserServlet" name="userid">${userid}</a> </font></p>
 			    </div>
 
 			    <div id="navbar" class="navbar-collapse collapse">
@@ -89,6 +89,7 @@
 				    <li><a href="/SwitchPage?page=funcPushMsg" >进行消息推送</a></li>
 					<li><a href="/SwitchPage?page=funcRegister" >登记客户车辆</a></li>
 					<li><a href="/SwitchPage?page=funcViewReg" >查询登记车辆</a></li>
+					<li><a href="/SwitchPage?page=funcViewRecord" >查看浏览记录</a></li>
 				    <!--功能可以继续扩展-->
 			    </ul>
 		    </div>
@@ -115,6 +116,49 @@
 						    </font>
 					    </p>
 				    </div>
+					<!-- START THE FEATURETTES -->
+
+					<hr class="featurette-divider">
+
+					<div class="row featurette">
+						<div class="col-md-7 col-md-push-5">
+							<h2 class="featurette-heading">
+								汽车销售管理系统 </br> <span class="text-muted">  </span></h2>
+							<p class="lead">专为汽车4S店、二手车、新车经销商设计的车辆销售管理系统。系统功能强大、操作简单、容易上手。</p>
+						</div>
+						<div class="col-md-5 col-md-pull-7">
+							<img class="featurette-image img-responsive center-block" src="../style/images/1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+						</div>
+					</div>
+
+					<hr class="featurette-divider">
+
+					<div class="row featurette">
+						<div class="col-md-7 col-md-push-5">
+							<h2 class="featurette-heading">精细化管理客户 <span class="text-muted">  </span></h2>
+							<p class="lead">程序化快速建档，自有服务器存储海量客户，避免客户数据丢失；意向客户及保险到期及时提醒，方便执行</p>
+						</div>
+						<div class="col-md-5 col-md-pull-7">
+							<img class="featurette-image img-responsive center-block" src="../style/images/1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+						</div>
+					</div>
+
+					<hr class="featurette-divider">
+
+					<div class="row featurette">
+						<div class="col-md-7 col-md-push-5">
+							<h2 class="featurette-heading">员工满意度提升 <span class="text-muted">  </span></h2>
+							<p class="lead">详细记录客户信息，更好的把控客户进度，以业绩为导向，通过目标管理聚焦关键任务，形成团队协同力。</p>
+						</div>
+						<div class="col-md-5 col-md-pull-7">
+							<img class="featurette-image img-responsive center-block" src="../style/images/1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+						</div>
+					</div>
+
+
+					<hr class="featurette-divider">
+
+					<!-- /END THE FEATURETTES -->
 					<!--//功能概览-->
 					
 					
