--- a/web/ShopPage/funcOverview.html
+++ b/web/ShopPage/funcOverview.html
@@ -50,6 +50,9 @@
 		<!--上方导航栏-->
 	    <nav class="navbar navbar-inverse navbar-fixed-top">
 		    <div class="container-fluid">
+				<div class="navbar-header">
+					<img src="../../style/images/mainlogo.png" style="width:50px">
+				</div>
 			    <div class="navbar-header">
 		  		    <p class="navbar-brand" ><font size="5">汽车销售管理系统</font></p>
 			    </div>
@@ -127,7 +130,7 @@
 							<p class="lead">专为汽车4S店、二手车、新车经销商设计的车辆销售管理系统。系统功能强大、操作简单、容易上手。</p>
 						</div>
 						<div class="col-md-5 col-md-pull-7">
-							<img class="featurette-image img-responsive center-block" src="../style/images/1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+							<img class="featurette-image img-responsive center-block" src="../style/images/client-manage.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
 						</div>
 					</div>
 
@@ -139,7 +142,7 @@
 							<p class="lead">程序化快速建档，自有服务器存储海量客户，避免客户数据丢失；意向客户及保险到期及时提醒，方便执行</p>
 						</div>
 						<div class="col-md-5 col-md-pull-7">
-							<img class="featurette-image img-responsive center-block" src="../style/images/1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+							<img class="featurette-image img-responsive center-block" src="../style/images/car-manage.png" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
 						</div>
 					</div>
 
@@ -151,7 +154,7 @@
 							<p class="lead">详细记录客户信息，更好的把控客户进度，以业绩为导向，通过目标管理聚焦关键任务，形成团队协同力。</p>
 						</div>
 						<div class="col-md-5 col-md-pull-7">
-							<img class="featurette-image img-responsive center-block" src="../style/images/1.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+							<img class="featurette-image img-responsive center-block" src="../style/images/team.jpg" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
 						</div>
 					</div>
 
