--- a/web/ShopPage/funcPushMsg.html
+++ b/web/ShopPage/funcPushMsg.html
@@ -50,6 +50,9 @@
 		<!--上方导航栏-->
 	    <nav class="navbar navbar-inverse navbar-fixed-top">
 		    <div class="container-fluid">
+				<div class="navbar-header">
+					<img src="../../style/images/mainlogo.png" style="width:50px">
+				</div>
 			    <div class="navbar-header">
 		  		    <p class="navbar-brand" ><font size="5">汽车销售管理系统</font></p>
 			    </div>
@@ -99,17 +102,17 @@
 							发布通知
 						</font>
 					</p>
-					<form role="form">
+					<form action="/PushMessageServlet" role="form">
 						<div>
 							<label for="name">标题(15字以内)</label>
-							<input name="price" style="width:500px" type="text" class="form-control"
+							<input name="title" style="width:500px" type="text" class="form-control"
 							placeholder="请输入标题" required="required" >
 							<br/><br/>
-							<textarea name="customermessage" style="width:1000px;" rows="5" warp="virtual" placeholder="正文" required></textarea>
+							<textarea name="message" style="width:1000px;" rows="5" warp="virtual" placeholder="正文" required></textarea>
 						</div>
 						<br/><br/>
 						<div class="btn-group pull-left" style="margin-left: 0px;">
-							<button id="addBtn" type="button" class="btn btn-default">
+							<button id="addBtn" type="submit" class="btn btn-default">
 							<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发布</button>
 						</div>
 					</form>			
