第二版本微改

--- a/web/WEB-INF/CustPage/main.html
+++ b/web/WEB-INF/CustPage/main.html
@@ -142,11 +142,11 @@
 				<div class="w3agile properties">
 					<div class="properties-top">
 						<h3 class="w3ls-title">功能简介</h3>
-						<p class="w3title-text">这里您可以看到可以使用的主要功能 </p>
+
 					</div> 
 					<div class="properties-bottom">
 						<div class="properties-img">
-							<img src="../../style/images/2.jpg" alt="">
+							<img src="../../style/images/testdrive.jpg" alt="">
 							<div class="view-caption">
 								<h4><span class="glyphicon glyphicon-eye-open"></span></h4>  
 							</div>
@@ -162,7 +162,7 @@
 					</div> 
 					<div class="properties-bottom">
 						<div class="properties-img">
-							<img src="../../style/images/1.jpg" alt="">
+							<img src="../../style/images/g1.jpg" alt="">
 							<div class="view-caption rent-caption">
 								<h4><span class="glyphicon glyphicon-picture"></span></h4>  
 							</div>
@@ -178,7 +178,7 @@
 					</div>
 					<div class="properties-bottom">
 						<div class="properties-img">
-							<img src="../../style/images/3.jpg" alt="">
+							<img src="../../style/images/repair.jpg" alt="">
 							<div class="view-caption">
 								<h4><span class="glyphicon glyphicon-envelope"></span></h4>  
 							</div>
