--- a/web/ShopPage/funcOverview.html
+++ b/web/ShopPage/funcOverview.html
@@ -50,7 +50,7 @@
 		<!--上方导航栏-->
 	    <nav class="navbar navbar-inverse navbar-fixed-top">
 		    <div class="container-fluid">
-				<div class="navbar-header">
+				<div class="navbar-header" >
 					<img src="../../style/images/mainlogo.png" style="width:50px">
 				</div>
 			    <div class="navbar-header">
@@ -93,6 +93,7 @@
 					<li><a href="/SwitchPage?page=funcRegister" >登记客户车辆</a></li>
 					<li><a href="/SwitchPage?page=funcViewReg" >查询登记车辆</a></li>
 					<li><a href="/SwitchPage?page=funcViewRecord" >查看浏览记录</a></li>
+					<li><a href="/SwitchPage?page=funcDataAnalyze" >浏览数据分析</a></li>
 				    <!--功能可以继续扩展-->
 			    </ul>
 		    </div>
@@ -114,7 +115,7 @@
 					<!--功能概览-->
 				    <div class="tab-pane fade in active">
 					    <p>
-						    <font size="4">
+						    <font size="6">
 						    在这里可以看到功能的概览
 						    </font>
 					    </p>
