代码缩减，debug，基本最终版

--- a/web/WEB-INF/CustPage/transaction.html
+++ b/web/WEB-INF/CustPage/transaction.html
@@ -68,7 +68,7 @@
 			<div class="content">
 				<!-- banner -->
 				<div class="banner about-banner"> 
-					<div class="banner-img">  
+					<div class="banner-img5">
 						<h3>我的预约</h3>   
 					</div> 
 				</div>
