--- a/web/WEB-INF/CustPage/gallery.html
+++ b/web/WEB-INF/CustPage/gallery.html
@@ -50,7 +50,7 @@
 			<div class="content"> 
 				<!-- banner -->
 				<div class="banner about-banner"> 
-					<div class="banner-img">  
+					<div class="banner-img8">
 						<h3>豪车鉴赏</h3>   
 					</div> 
 				</div>
